--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -2,6 +2,7 @@ button{
     cursor: pointer;
     background: none;
     border: none;
+    font-family: 'Rubik-Medium';
 }
 
 button:hover{
@@ -9,6 +10,12 @@ button:hover{
     transition: ease .8s;
 }
 
-/* *{
-    display: none;
-} */
+input, textarea{
+    outline: none;
+    font-family: 'Rubik-Medium';
+    resize: none;
+}
+
+input:focus, textarea:focus{
+    outline: none;
+}
