successfully splitteed the app into individual comment components

--- a/src/assets/sass/style.sass
+++ b/src/assets/sass/style.sass
@@ -1,4 +1,8 @@
 @font-face
+    font-family: 'Rubik-Light'
+    src: url('~@/assets/fonts/Rubik-Light.ttf') format('truetype')
+
+@font-face
     font-family: 'Rubik-Regular'
     src: url('~@/assets/fonts/Rubik-Regular.ttf') format('truetype')
 
